[gd_scene load_steps=3 format=3 uid="uid://dg6f4jtiqh7y"]

[ext_resource type="Script" uid="uid://dtwuo6r7rq4na" path="res://src/ui/record_setup_screen.gd" id="1_t6dv5"]
[ext_resource type="LabelSettings" uid="uid://dt2vc3mnta5p5" path="res://src/ui/title_label_settings.tres" id="2_chkdo"]

[node name="RecordSetupScreen" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -127.5
offset_right = 160.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_t6dv5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Record"
label_settings = ExtResource("2_chkdo")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="MaxLengthLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Max Length"

[node name="MaxLengthField" type="SpinBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 60.0
step = 0.1
value = 5.0
alignment = 1
custom_arrow_step = 1.0

[node name="DelayStartLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Delay Start"

[node name="DelayStartField" type="SpinBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 60.0
step = 0.1
value = 3.0
alignment = 1
custom_arrow_step = 1.0

[node name="PosesLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Poses"

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="LeftWristPoseField" type="CheckBox" parent="GridContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Left Wrist"

[node name="RightWristPoseField" type="CheckBox" parent="GridContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Right Wrist"

[node name="LeftJointPosesField" type="CheckBox" parent="GridContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Left Joints"

[node name="RightJointPosesField" type="CheckBox" parent="GridContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Right Joints"

[node name="HMDPoseField" type="CheckBox" parent="GridContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "HMD"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="RecordButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Record"

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RecordButton" to="." method="_on_record_button_pressed"]
